<resources>
    <string name="app_name">ExcelGuide</string>
    <string name="button">Button</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="excel">Excel</string>
    <string name="guide">Guide</string>
    <string name="guide_for_your_quirey">Guide for your quirey</string>
    <string name="explore">Explore</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main11">MainActivity11</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>